--- a/src/css/style.css
+++ b/src/css/style.css
@@ -223,10 +223,6 @@ img {
   text-transform: uppercase;
 }
 
-.pages {
-  padding-right: 20px;
-}
-
 .enter-word {
   box-shadow: 0 1px 3px rgba(0,0,0,.12), 0 1px 2px rgba(0,0,0,.24);
   border-radius: .5em;
@@ -274,13 +270,34 @@ img {
 }
 
 .messages {
-  padding: 10px 20px 10px 20px;
   height: 70vh;
   overflow-y: scroll;
 }
 
-.messages li {
+.players, .messages {
+  padding: 10px 20px 10px 20px;
+}
+
+.players li, .messages li {
   list-style: none;
+}
+
+.players li {
+  font-weight: bold;
+}
+
+.players ul {
+  padding: 0;
+}
+
+.popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  z-index: 1;
+  background: white;
+  padding: 10px 20px;
+  transform: translateX(-50%) translateY(-50%);
 }
 
 .log {
